--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,7 +24,7 @@
   <!-- Start Content -->
   <div id="home" class="w3-container w3-padding-64">
 
-    <form action="/draw" method="get">
+    <form action="/draw" method="post">
       <label for="sideLength">Enter the side length:</label>
       <input type="number" id="sideLength" name="sideLength" required>
 
